--- a/packages/builder/src/global.css
+++ b/packages/builder/src/global.css
@@ -1,33 +1,29 @@
-html {
-    /* Light theme */
-    --background: #FFFFFF;
-    --ink: #393C44;
-}
-html.dark {
-    /* Dark theme */
-    --theme-hue: 208;
-    --theme-saturation: 9%;
-    --theme-brightness: 16%;
-    --ink: hsl(var(--theme-hue), var(--theme-saturation), 90%);
-    --background: hsl(var(--theme-hue), var(--theme-saturation), var(--theme-brightness));
-    --grey-1: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 2%));
-    --grey-2: hsl(var(--theme-hue), calc(var(--theme-saturation) + 1%), calc(var(--theme-brightness) + 4%));
-    --grey-3: hsl(var(--theme-hue), var(--theme-saturation),calc(var(--theme-brightness) + 7%));
-    --grey-4: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 10%));
-    --grey-5: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 25%));
-    --grey-6: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 30%));
-    --grey-7: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 55%));
-    --grey-8: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 60%));
-    --grey-9: hsl(var(--theme-hue), var(--theme-saturation), calc(var(--theme-brightness) + 70%));
-}
-
 html, body {
-    font-family: var(--font-sans);
-    color: var(--ink);
     padding: 0;
     margin: 0;
     height: 100%;
     width: 100%;
+    min-height: 100%;
+}
+
+body {
+    --background: var(--spectrum-alias-background-color-primary);
+    --background-alt: var(--spectrum-alias-background-color-secondary);
+    --border-light: 1px solid var(--spectrum-global-color-gray-200);
+    --border-dark: 1px solid var(--spectrum-global-color-gray-300);
+    --ink: var(--spectrum-alias-text-color);
+    --grey-1: var(--spectrum-global-color-gray-100);
+    --grey-2: var(--spectrum-global-color-gray-200);
+    --grey-3: var(--spectrum-global-color-gray-300);
+    --grey-4: var(--spectrum-global-color-gray-400);
+    --grey-5: var(--spectrum-global-color-gray-500);
+    --grey-6: var(--spectrum-global-color-gray-600);
+    --grey-7: var(--spectrum-global-color-gray-700);
+    --grey-8: var(--spectrum-global-color-gray-800);
+    --grey-9: var(--spectrum-global-color-gray-900);
+
+    font-family: var(--font-sans);
+    color: var(--ink);
     background-color: var(--background);
 }
 
