Update all backend table popovers to use spectrum and fix multiple bugs

--- a/packages/builder/src/global.css
+++ b/packages/builder/src/global.css
@@ -30,7 +30,7 @@ body {
 #app {
     height: 100%;
     box-sizing: border-box;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .hoverable:hover {
