--- a/packages/bbui/src/bbui.css
+++ b/packages/bbui/src/bbui.css
@@ -1,32 +1,3 @@
-.svench-content {
-  color: #666;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, "Roboto",
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-h1.svench-content {
-  font-size: 2em;
-}
-h2.svench-content {
-  font-size: 1.66em;
-}
-h3.svench-content {
-  font-size: 1.33em;
-}
-h4.svench-content {
-  font-size: 1.33em;
-  font-weight: normal;
-}
-h5.svench-content {
-  font-size: 1em;
-  font-weight: bold;
-}
-h6.svench-content {
-  font-size: 1em;
-  font-weight: normal;
-  font-style: italic;
-}
-
 :root {
   --background: #ffffff;
   --ink: #000000;
@@ -127,7 +98,6 @@ h6.svench-content {
 
 h1 {
   font-size: 3rem;
-  font-family: var(--font-sans);
   font-weight: 700;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -136,7 +106,6 @@ h1 {
 
 h2 {
   font-size: 2.25rem;
-  font-family: var(--font-sans);
   font-weight: 600;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -145,7 +114,6 @@ h2 {
 
 h3 {
   font-size: 1.7rem;
-  font-family: var(--font-sans);
   font-weight: 600;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -154,7 +122,6 @@ h3 {
 
 h4 {
   font-size: var(--font-size-xl);
-  font-family: var(--font-sans);
   font-weight: 500;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -163,7 +130,6 @@ h4 {
 
 h5 {
   font-size: var(--font-size-l);
-  font-family: var(--font-sans);
   font-weight: 500;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -172,7 +138,6 @@ h5 {
 
 h6 {
   font-size: var(--font-size-m);
-  font-family: var(--font-sans);
   font-weight: 500;
   text-rendering: var(--text-render);
   -webkit-font-smoothing: var(--text-smooth);
@@ -190,4 +155,8 @@ p {
 
 a {
   text-decoration: none;
+}
+
+.spectrum {
+  --spectrum-alias-body-text-font-family: "Inter", sans-serif;
 }
