Fleshing out the main work behind the email generation.

--- a/packages/worker/src/constants/templates/passwordRecovery.html
+++ b/packages/worker/src/constants/templates/passwordRecovery.html
@@ -6,7 +6,7 @@
         <span class="subheading">Budibase Password reset</span>
         <h2>Please follow the below link to reset your password.</h2>
         <p><a href="{{ resetUrl }}" class="btn btn-primary">Reset password</a></p>
-        <p>This password reset was required for {{ user }} if you did not
+        <p>This password reset was required for {{ email }} if you did not
           request this then please contact your administrator.</p>
       </div>
     </td>
