--- a/packages/builder/src/global.css
+++ b/packages/builder/src/global.css
@@ -6,6 +6,10 @@ html, body {
     min-height: 100%;
 }
 
+.spectrum--light {
+    --spectrum-alias-background-color-primary: var(--spectrum-global-color-gray-75);
+}
+
 body {
     --background: var(--spectrum-alias-background-color-primary);
     --background-alt: var(--spectrum-alias-background-color-secondary);
@@ -24,7 +28,7 @@ body {
 
     font-family: var(--font-sans);
     color: var(--ink);
-    background-color: var(--background);
+    background-color: var(--background-alt);
 }
 
 #app {
