Major update, fixing email test case.

--- a/packages/worker/src/constants/templates/base.hbs
+++ b/packages/worker/src/constants/templates/base.hbs
@@ -47,7 +47,7 @@
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                     <tbody><tr>
                       <td style="text-align: left; padding-left: 10px;">
-                        <h3 class="heading"><a href="{{ url }}">Budibase Platform</a></h3>
+                        <h3 class="heading"><a href="{{ platformUrl }}">Budibase Platform</a></h3>
                       </td>
                     </tr>
                     </tbody></table>
@@ -64,7 +64,7 @@
                   <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                     <tbody><tr>
                       <td style="text-align: left; padding-right: 10px;">
-                        <p>© 2021 Restobar. All Rights Reserved</p>
+                        <p>© 2021 {{ company }}. All Rights Reserved</p>
                       </td>
                     </tr>
                     </tbody></table>
@@ -80,3 +80,4 @@
   </tbody>
 </table>
 </body>
+</html>
