--- a/packages/worker/src/constants/templates/passwordRecovery.hbs
+++ b/packages/worker/src/constants/templates/passwordRecovery.hbs
@@ -1,15 +1,62 @@
-<table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
-  <tbody>
+<!-- Based on template: https://github.com/wildbit/postmark-templates/blob/master/templates/plain/password-reset/content.html -->
+<span class="preheader">Use this link to reset your password. The link is only valid for 24 hours.</span>
+<table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
   <tr>
-    <td class="bg_dark email-section" style="text-align:center;">
-      <div class="heading-section heading-section-white">
-        <span class="subheading">Budibase Password reset</span>
-        <h2>Please follow the below link to reset your password.</h2>
-        <p><a href="{{ resetUrl }}" class="btn btn-primary">Reset password</a></p>
-        <p>This password reset was required for {{ email }} if you did not
-          request this then please contact your administrator.</p>
-      </div>
+    <td align="center">
+      <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+        <tr>
+          <td class="email-masthead">
+            <a href="{{ platformUrl }}" class="f-fallback email-masthead_name">
+              {{ company }}
+            </a>
+          </td>
+        </tr>
+        <!-- Email Body -->
+        <tr>
+          <td class="email-body" width="570" cellpadding="0" cellspacing="0">
+            <table class="email-body_inner" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
+              <!-- Body content -->
+              <tr>
+                <td class="content-cell">
+                  <div class="f-fallback">
+                    <h1>Hi {{ email }},</h1>
+                    <p>You recently requested to reset your password for your {{ company }} account in your Budibase platform. Use the button below to reset it. <strong>This password reset is only valid for the next 24 hours.</strong></p>
+                    <!-- Action -->
+                    <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+                      <tr>
+                        <td align="center">
+                          <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+                            <tr>
+                              <td align="center">
+                                <a href="{{ resetUrl }}" class="f-fallback button button--green" target="_blank">Reset your password</a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    {{#if request}}
+                      <p>For security, this request was received from a {{ request.os }} device.</p>
+                    {{/if}}
+                    <p>If you did not request a password reset, please ignore this email or contact support if you have questions.</p>
+                    <p>Thanks,
+                      <br>The {{ company }} Team</p>
+                    <!-- Sub copy -->
+                    <table class="body-sub" role="presentation">
+                      <tr>
+                        <td>
+                          <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
+                          <p class="f-fallback sub">{{ resetUrl }}</p>
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
     </td>
   </tr>
-  </tbody>
 </table>
