Formatting, linting and handling year copyright properly.

--- a/packages/worker/src/constants/templates/base.hbs
+++ b/packages/worker/src/constants/templates/base.hbs
@@ -24,7 +24,7 @@
 <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
   <tr>
     <td class="content-cell" align="center">
-      <p class="f-fallback sub align-center">&copy; 2021 {{ company }}. All rights reserved.</p>
+      <p class="f-fallback sub align-center">&copy; {{ currentYear }} {{ company }}. All rights reserved.</p>
     </td>
   </tr>
 </table>
