--- a/packages/worker/src/constants/templates/base.hbs
+++ b/packages/worker/src/constants/templates/base.hbs
@@ -20,11 +20,28 @@
   <![endif]-->
 </head>
 <body>
-{{ body }}
-<table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
+<table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
   <tr>
-    <td class="content-cell" align="center">
-      <p class="f-fallback sub align-center">&copy; {{ currentYear }} {{ company }}. All rights reserved.</p>
+    <td align="center">
+      <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+        <tr>
+          <td class="email-masthead">
+            <a href="{{ platformUrl }}" class="f-fallback email-masthead_name">
+              {{ company }}
+            </a>
+          </td>
+        </tr>
+        {{ body }}
+        <tr>
+          <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
+            <tr>
+              <td class="content-cell" align="center">
+                <p class="f-fallback sub align-center">&copy; {{ currentYear }} {{ company }}. All rights reserved.</p>
+              </td>
+            </tr>
+          </table>
+        </tr>
+      </table>
     </td>
   </tr>
 </table>
