--- a/packages/worker/src/constants/templates/welcome.hbs
+++ b/packages/worker/src/constants/templates/welcome.hbs
@@ -8,7 +8,7 @@
           <div class="f-fallback">
             <h1>Welcome, {{ email }}!</h1>
             <p>Thanks for getting started with {{ company }}'s Budibase platform.</p>
-            <p>For reference, here's your login information:</p>
+            <p>For reference, here's how to login:</p>
             <table class="attributes" width="100%" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                 <td class="attributes_content">
