--- a/hosting/envoy.dev.yaml.hbs
+++ b/hosting/envoy.dev.yaml.hbs
@@ -38,7 +38,7 @@ static_resources:
                 route:
                   cluster: server-dev
 
-              - match: { prefix: "/builder/" }
+              - match: { prefix: "/" }
                 route:
                   cluster: builder-dev
 
@@ -46,10 +46,6 @@ static_resources:
                 route:
                   cluster: builder-dev
                   prefix_rewrite: "/builder/"
-
-              # special case in dev to redirect no path to builder
-              - match: { path: "/" } 
-                redirect: { path_redirect: "/builder/" }
  
               # minio is on the default route because this works
               # best, minio + AWS SDK doesn't handle path proxy
