--- a/hosting/envoy.dev.yaml.hbs
+++ b/hosting/envoy.dev.yaml.hbs
@@ -33,14 +33,14 @@ static_resources:
                 route:
                   cluster: server-dev
 
-              - match: { prefix: "/" }
+              - match: { path: "/" }
                 route:
                   cluster: builder-dev
 
-              - match: { prefix: "/builder" }
+              - match: { prefix: "/app" }
                 route:
                   cluster: builder-dev
-                  prefix_rewrite: "/builder/"
+                  prefix_rewrite: "/app/"
  
               # minio is on the default route because this works
               # best, minio + AWS SDK doesn't handle path proxy
