Make envoy proxy app with and without trailing slash

--- a/hosting/envoy.dev.yaml.hbs
+++ b/hosting/envoy.dev.yaml.hbs
@@ -37,6 +37,10 @@ static_resources:
                 route:
                   cluster: builder-dev
 
+              - match: { prefix: "/app/" }
+                route:
+                  cluster: builder-dev
+
               - match: { prefix: "/app" }
                 route:
                   cluster: builder-dev
