--- a/hosting/envoy.dev.yaml.hbs
+++ b/hosting/envoy.dev.yaml.hbs
@@ -19,7 +19,7 @@ static_resources:
               # special case to redirect specifically the route path
               # to the builder, if this were a prefix then it would break minio
               - match: { path: "/" }
-                redirect: { path_redirect: "/app/" }
+                redirect: { path_redirect: "/builder/" }
 
               - match: { prefix: "/db/" }
                 route:
@@ -42,14 +42,14 @@ static_resources:
                 route:
                   cluster: builder-dev
 
-              - match: { prefix: "/app/" }
+              - match: { prefix: "/builder/" }
                 route:
                   cluster: builder-dev
 
-              - match: { prefix: "/app" }
+              - match: { prefix: "/builder" }
                 route:
                   cluster: builder-dev
-                  prefix_rewrite: "/app/"
+                  prefix_rewrite: "/builder/"
 
               # minio is on the default route because this works
               # best, minio + AWS SDK doesn't handle path proxy
