Renaming registration to invite URL.

--- a/packages/worker/src/constants/templates/invitation.hbs
+++ b/packages/worker/src/constants/templates/invitation.hbs
@@ -22,7 +22,7 @@
                   <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                     <tr>
                       <td align="center">
-                        <a href="{{ registrationUrl }}" class="f-fallback button" target="_blank">Set up account</a>
+                        <a href="{{ inviteUrl }}" class="f-fallback button" target="_blank">Set up account</a>
                       </td>
                     </tr>
                   </table>
@@ -38,7 +38,7 @@
               <tr>
                 <td>
                   <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
-                  <p class="f-fallback sub">{{ registrationUrl }}</p>
+                  <p class="f-fallback sub">{{ inviteUrl }}</p>
                 </td>
               </tr>
             </table>
