Fix chart placeholder, fix spectrum colours and begin work on pagination component

--- a/packages/builder/src/global.css
+++ b/packages/builder/src/global.css
@@ -7,12 +7,12 @@ html, body {
 }
 
 .spectrum--light {
-    --spectrum-alias-background-color-primary: var(--spectrum-global-color-gray-75);
+    /*--spectrum-alias-background-color-primary: var(--spectrum-global-color-gray-75);*/
 }
 
 body {
     --background: var(--spectrum-alias-background-color-primary);
-    --background-alt: var(--spectrum-alias-background-color-secondary);
+    --background-alt: var(--spectrum-alias-background-color-default);
     --border-light: 1px solid var(--spectrum-global-color-gray-300);
     --border-dark: 1px solid var(--spectrum-global-color-gray-400);
     --ink: var(--spectrum-alias-text-color);
