--- a/hosting/envoy.dev.yaml.hbs
+++ b/hosting/envoy.dev.yaml.hbs
@@ -26,7 +26,7 @@ static_resources:
                   cluster: couchdb-service
                   prefix_rewrite: "/"
 
-              - match: { prefix: "/api/admin/" }
+              - match: { prefix: "/api/global/" }
                 route:
                   cluster: worker-dev
 
